--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "install-server": "cd backend && npm install",
-    "start-server": "cd backend && node app.js",
-    "install-client": "cd client && npm install",
-    "build-client": "cd client && npm run build",
-    "start-client": "cd client && npm run start",
+    "install-server": "npm install",
+    "start-server": "node index.js",
+    "install-client": "cd frontend && npm install",
+    "build-client": "cd frontend && npm run build",
+    "start-client": "cd frontend && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
