--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
     "dev": "nodemon index.js",
     "install-server": "npm install",
     "start-server": "node index.js",
-    "install-client": "cd frontend && npm install",
-    "build-client": "cd frontend && npm run build",
-    "start-client": "cd frontend && npm run start",
+    "install-client": "npm install",
+    "build-client": "npm run build",
+    "start-client": "npm run start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
